--- a/multistart/Makefile
+++ b/multistart/Makefile
@@ -3,10 +3,14 @@ CFLAGS=-Wall -O3 -fopenmp
 #CFLAGS+=-DDEBUG
 LDLIBS=-lm
 
+MPIFLAGS =-Wall -O3
+MPICC=mpicc
+
+
 #TODO: add the following cases: multistart_mds_omp multistart_mds_omp_tasks multistart_mds_mpi
 
 # Build all versions
-all: multistart_mds_seq multistart_mds_omp multistart_mds_omp_tasks
+all: multistart_mds_seq multistart_mds_omp multistart_mds_omp_tasks multistart_mds_mpi
 
 # Sequential version
 multistart_mds_seq: multistart_mds_seq.c torczon.c Makefile
@@ -18,8 +22,14 @@ multistart_mds_omp: multistart_mds_omp.c torczon.c Makefile
 
 
 # OpenMP Tasks version
-multistart_mds_omp_tasks: multistart_mds_omp_tasks.c torczon_omp_tasks.c Makefile
-	$(CC) $(CFLAGS) -o multistart_mds_omp_tasks multistart_mds_omp_tasks.c torczon_omp_tasks.c $(LDLIBS)
+multistart_mds_omp_tasks: multistart_mds_omp_tasks.c torczon.c Makefile
+	$(CC) $(CFLAGS) -o multistart_mds_omp_tasks multistart_mds_omp_tasks.c torczon.c $(LDLIBS)
+
+
+# MPI version
+multistart_mds_mpi: multistart_mds_mpi.c torczon.c Makefile
+	$(MPICC) $(MPIFLAGS) -o multistart_mds_mpi multistart_mds_mpi.c torczon.c $(LDLIBS)
+
 
 clean:
-	rm -f multistart_mds_seq multistart_mds_omp multistart_mds_omp_tasks
+	rm -f multistart_mds_seq multistart_mds_omp multistart_mds_omp_tasks multistart_mds_mpi
